<resources>
    <string name="app_name">VotingSwipe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="register">Register</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="fill">Please fill %1$s field %2$s</string>
    <string name="symbols">using @ and . symbols</string>
    <string name="slashes">using format dd/mm/yyyy</string>
    <string name="minChars">field must have 6 characters at least</string>
    <string name="notRegistered">User can not be registered</string>
    <string name="userExists">Email already exists</string>
    <string name="notKey">Could not get push key for users</string>
    <string name="notPhoto">Please select a photo</string>
    <string name="upload">Upload</string>
    <string name="take">Take</string>
    <string name="errorLoadUsers">Users can not be loaded</string>
</resources>
