<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerActivity.RegisterActivity">

    <TextView
            android:id="@+id/nameText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintEnd_toStartOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/name"/>
    <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nameText"
            app:layout_constraintVertical_chainStyle="packed"
    />
    <TextView
            android:id="@+id/dateText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintEnd_toStartOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/date"
    />
    <EditText
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintBottom_toTopOf="@id/emailReg"
            android:layout_marginTop="10dp"
            android:inputType="date"
            app:layout_constraintStart_toEndOf="@id/dateText"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/emailText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/emailReg"
            app:layout_constraintEnd_toStartOf="@id/emailReg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginBottom="10dp"

    />
    <EditText
            android:id="@+id/emailReg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintBottom_toTopOf="@id/passwordReg"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toEndOf="@id/emailText"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/passwordText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/passwordReg"
            app:layout_constraintEnd_toStartOf="@id/passwordReg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginBottom="10dp"

    />
    <EditText
            android:id="@+id/passwordReg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailReg"
            app:layout_constraintBottom_toTopOf="@id/descriptionText"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@id/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/descriptionText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordReg"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/passwordText"
            app:layout_constraintHorizontal_chainStyle="packed"

    />
    <EditText
            android:id="@+id/description"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText"
            app:layout_constraintBottom_toTopOf="@id/registerButton"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Register"
    />

</android.support.constraint.ConstraintLayout>